--- a/Memories.html
+++ b/Memories.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "htt`://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Happy birthday!</title>     
+    <title>GIEOCLUB</title>     
     <link type="text/css" rel="stylesheet" href="./css/default.css">
     <script type="text/javascript" src="./css/jquery.min.js"></script>
     <script type="text/javascript" src="./css/jscex.min.js"></script>
@@ -43,15 +43,10 @@ document.querySelector('.play-music').addEventListener('click', playMusic);
                 <div id="text">
               <div id="code">
             <font color="#FF0000">    
-<span class="say"><h1>Chúc mừng sinh nhật</h1></span><br><br>
-<span class="say">Happy Birthday</span><br> <br>    
-<span class="say">生日快乐</span><br><br>
-<span class="say">생일 축하합니다</span><br><br>
-<span class="say">お誕生日おめでとうございます</span><br><br>
-<span class="say">Joyeux anniversaire, C днем рождения</span><br><br>
-<span class="say">Herzlichen Glückwunsch zum Geburtstag, Buon compleanno, Feliz cumpleaños</span><br><br>
-<span class="say"><span class="space"></span></span><br>
-<span class="say"><h1>Chúc mừng sinh nhật Xuân Quỳnh</h1></span><br>
+<span class="say"><h1>GIEOCLUB WITH LOVE</h1></span><br><br>
+<span class="say">Xin gửi lời chúc tốt đẹp nhất đến bạn - Người đã lựa chọn nhà MIS tại ngôi trường Đh Ngân hàng TPHCM. Chúc những ngày tháng thanh xuân sắp tới của bạn sẽ thật rực rỡ, tràn ngập năng lượng tuổi trẻ, thành công trong học tập và công việc. </span><br> <br>    
+<span class="say">GIEO CLUB rất vui nếu có thể là chỗ dựa tinh thần và phát triển cho bạn trong 4 năm đại học này. Hãy cùng trải nghiệm để thành công. </span><br><br>
+<span class="say"><h1>GIEO CLUB super yêu quý bạn❤</h1></span><br>
         </font>
       </div>
                 </div>
