--- a/Memories.html
+++ b/Memories.html
@@ -21,8 +21,7 @@
       <button class="play-music">Phát nhạc</button>
 
 <audio id="myAudio" loop>
-  <source src="music/hpbd.mp3" type="audio/mpeg">
-  <source src="music/hpbd.ogg" type="audio/ogg">
+  <source src="music/index.mp3" type="audio/mpeg">
   Trình duyệt của bạn không hỗ trợ HTML5 Audio.
 </audio>
 
