--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@ document.querySelector('.play-music').addEventListener('click', playMusic);
         </div>
         <ul class="bg-bubbles">
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
           <li>
-            <img src="./img/timg.gif" style="width: 100%; height: 100%" />
+            <img src="./img/logo.png" style="width: 240px; height: 240px" />
           </li>
         </ul>
       </div>
