--- a/index2.html
+++ b/index2.html
@@ -39,16 +39,16 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
+          <h2 id="text3">Cậu có vui khi trở thành MISer K39 khum ?</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            Đồng hành cùng tớ đến khi ra trường nha hihi ^_^
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
-          Yêu ơi là yêuuuuuu <333
+          Tất nhiên rồi nè :))
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Không, tất cả chỉ là tai nạn
         </button>
       </div>
     </div>
