--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href=" https://fonts.googleapis.com/css?family=Pacifico"
+      href=" https://fonts.googleapis.com/css?family=Noto+Sans"
     />
     <link
       rel="stylesheet"
