--- a/traitim/test3.html
+++ b/traitim/test3.html
@@ -12,27 +12,27 @@
     <div id="drag-container">
       <div id="spin-container">
         <img
-          src="\logo1.png"
+          src="logo1.png"
           alt=""
         />
         <img
-          src="\logo2.png"
+          src="logo2.png"
           alt=""
         />
         <img
-          src="\logo3.png"
+          src="logo3.png"
           alt=""
         />
         <img
-          src="\logo4.png"
+          src="logo4.png"
           alt=""
         />
         <img
-          src="\logo5.jpg"
+          src="logo5.jpg"
           alt=""
         />
         <img
-          src="\logo6.jpg"
+          src="logo6.jpg"
           alt=""
         />
 
