--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu có vui khi trở thành MISer K39 khum ?</h2>
+          <h2 id="text3">Cậu có vui khi trở thành MISer khum ?</h2>
           <h4 id="text4">
             Đồng hành cùng tớ đến khi ra trường nha hihi ^_^
           </h4>
