--- a/Memories.html
+++ b/Memories.html
@@ -43,9 +43,9 @@ document.querySelector('.play-music').addEventListener('click', playMusic);
               <div id="code">
             <font color="#FF0000">    
 <span class="say"><h1>GIEOCLUB WITH LOVE</h1></span><br><br>
-<span class="say">Xin gửi lời chúc tốt đẹp nhất đến bạn - Người đã lựa chọn nhà MIS tại ngôi trường Đh Ngân hàng TPHCM. Chúc những ngày tháng thanh xuân sắp tới của bạn sẽ thật rực rỡ, tràn ngập năng lượng tuổi trẻ, thành công trong học tập và công việc. </span><br> <br>    
+<span class="say">Xin gửi lời chúc tốt đẹp nhất đến bạn - Người đã lựa chọn nhà MIS tại ngôi trường ĐH Ngân hàng TPHCM. Chúc những ngày tháng thanh xuân sắp tới của bạn sẽ thật rực rỡ, tràn ngập năng lượng tuổi trẻ, thành công trong học tập và công việc. </span><br> <br>    
 <span class="say">GIEO CLUB rất vui nếu có thể là chỗ dựa tinh thần và phát triển cho bạn trong 4 năm đại học này. Hãy cùng trải nghiệm để thành công. </span><br><br>
-<span class="say"><h1>GIEO CLUB super yêu quý bạn❤</h1></span><br>
+<span class="say"><h1>GIEO CLUB super yêu quý bạn ❤❤❤</h1></span><br>
         </font>
       </div>
                 </div>
