--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MISerK39</title>
+    <title>MISer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
