--- a/20THANG10.html
+++ b/20THANG10.html
@@ -2320,7 +2320,7 @@ document.querySelector('.play-music').addEventListener('click', playMusic);
   /* font-family: cursive; */
   font-size: 2rem;
   color: indianred;">
-            CHÚC CÁC BẠN 20/10 VUI VẺ, HẠNH PHÚC, XINH ĐẸP <3
+            CHÚC CÁC BẠN 20/10 VUI VẺ <3
         </h1>
         <div class='vehicle-body'>
             <div class='wrap-body'>
