--- a/Laptrinhweb/index.html
+++ b/Laptrinhweb/index.html
@@ -206,12 +206,12 @@
 
         function triggerLightning() {
             const lightning = document.querySelector('.lightning');
-            const background = document.querySelector('.background');
+            //const background = document.querySelector('.background');
             lightning.style.opacity = 1;
-            background.style.opacity = 1;
+           // background.style.opacity = 1;
             setTimeout(() => {
                 lightning.style.opacity = 0;
-                background.style.opacity = 0.2;
+              //  background.style.opacity = 0.2;
             }, 200);
         }
 
